--- a/app/src/main/res/layout/activity_give_tip.xml
+++ b/app/src/main/res/layout/activity_give_tip.xml
@@ -36,8 +36,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/app_bar"
         android:text="@string/nominal"
-        android:textSize="24sp"
-        android:fontFamily="@font/urbanist_regular"
+        android:textSize="16sp"
+        android:fontFamily="@font/urbanist_medium"
         android:textColor="@color/light_black"/>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -71,7 +71,7 @@
         app:layout_constraintTop_toBottomOf="@id/edt_value"
         app:layout_constraintStart_toStartOf="parent"
         android:text="@string/give_tip"
-        android:textSize="24sp"
+        android:textSize="16sp"
         android:fontFamily="@font/urbanist_medium"
         android:textColor="@color/light_black" />
 
@@ -138,7 +138,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="16dp"
         android:text="@string/send"
-        android:textSize="24sp"
+        android:textSize="16sp"
         android:fontFamily="@font/urbanist_medium"
         android:textColor="@color/white_bg" />
 
