--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
-    android:backgroundTint="@color/grey"
+    android:backgroundTint="@color/light_black"
     app:cardCornerRadius="20dp"
     app:contentPadding="16dp"
     android:layout_marginBottom="8dp"
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/urbanist_bold"
             android:text="@string/tip"
-            android:textColor="@color/black"
+            android:textColor="@color/white_bg"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,7 +31,7 @@
             android:layout_marginTop="8dp"
             android:fontFamily="@font/urbanist_medium"
             android:text="@string/to_user"
-            android:textColor="@color/black"
+            android:textColor="@color/white_bg"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_transaction" />
@@ -43,7 +43,7 @@
             android:layout_marginEnd="8dp"
             android:fontFamily="@font/urbanist_bold"
             android:text="@string/ts_system"
-            android:textColor="@color/black"
+            android:textColor="@color/white_bg"
             android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@id/tv_transaction_value"
             app:layout_constraintBottom_toTopOf="@id/tv_date"/>
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/urbanist_bold"
             android:text="@string/tip_value"
-            android:textColor="@color/black"
+            android:textColor="@color/white_bg"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/tv_date"/>
@@ -65,7 +65,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/urbanist_regular"
             android:text="@string/date"
-            android:textColor="@color/light_black"
+            android:textColor="@color/light_gray"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_user" />
@@ -77,7 +77,7 @@
             android:layout_marginTop="8dp"
             android:fontFamily="@font/urbanist_medium"
             android:text="@string/message"
-            android:textColor="@color/black"
+            android:textColor="@color/white_bg"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_date" />
