--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -15,6 +15,7 @@
         app:layout_constraintTop_toTopOf="parent" >
 
         <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:navigationIcon="@drawable/ic_back"
@@ -57,6 +58,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_list_user"
         android:layout_marginTop="16dp"
         android:layout_marginHorizontal="16dp"
-        tools:listitem="@layout/item_contact"/>
+        tools:listitem="@layout/item_contact"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
