--- a/app/src/main/res/layout/activity_give_tip.xml
+++ b/app/src/main/res/layout/activity_give_tip.xml
@@ -14,6 +14,7 @@
         app:layout_constraintTop_toTopOf="parent" >
 
         <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:navigationIcon="@drawable/ic_back"
@@ -56,8 +57,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/urbanist_semibold"
-            android:hint="@string/money"
-            android:inputType="textEmailAddress"
+            android:hint="@string/dalam_rupiah"
+            android:inputType="numberDecimal"
             android:textColorHint="@color/light_gray"
             android:textSize="32sp" />
     </com.google.android.material.textfield.TextInputLayout>
