--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -27,13 +27,24 @@
 
 
         <TextView
-            android:id="@+id/tv_username"
+            android:id="@+id/tv_name"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tv_number"
             app:layout_constraintStart_toEndOf="@+id/photo"
             app:layout_constraintTop_toTopOf="parent"
             android:text="@string/name_full"
+            android:textSize="16sp"
+            android:fontFamily="@font/urbanist_semibold"
+            android:textColor="@color/light_black"/>
+        <TextView
+            android:id="@+id/tv_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/photo"
+            app:layout_constraintTop_toBottomOf="@id/tv_name"
+            android:text="@string/number_reg"
             android:textSize="16sp"
             android:fontFamily="@font/urbanist_medium"
             android:textColor="@color/light_black"/>
